# iris-analyzer

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Info.plist  IrisAnalyzer.entitlements  Package.swift  README.md  SECURITY.md  app.py  app_live.py  app_v2.py  build_app.sh  captura_guiada.py  capture.py  config.py  desktop_app.py  download_model.py  iris_advanced.py  iris_analysis.py  iris_features.py  iris_map.py  iris_segmentation.py  notarize.sh  pdf_report.py  pyproject.toml  requirements-dev.txt  requirements-web.txt  requirements.txt  run.py  run_tests.sh  run_web.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
Sources/IrisAnalyzer/: App.swift  Main.swift
Sources/IrisAnalyzer/Branding/: IconMaker.swift  Theme.swift
Sources/IrisAnalyzer/CV/: ColorFeatures.swift  GrayImage.swift  Pipeline.swift
Sources/IrisAnalyzer/Report/: PDFReport.swift
Sources/IrisAnalyzer/Testing/: SelfTest.swift  Synth.swift
Sources/IrisAnalyzer/UI/: AnalysisViewModel.swift  Auth.swift  CameraPreview.swift  EyeCardView.swift  LoginView.swift  RootView.swift
docs/: index.html
iris_analyzer/: __init__.py  captura_guiada.py  config.py  desktop_app.py  iris_advanced.py  iris_features.py  iris_map.py  iris_metrics.py  iris_quality.py  iris_segmentation.py  pdf_report.py  server.py  validation.py
native-macos/: .gitignore
native-macos/Sources/IrisAnalyzer/Branding/: Theme.swift
native-macos/Sources/IrisAnalyzer/CV/: Daugman.swift  Normalization.swift  Quality.swift  Texture.swift
native-macos/Sources/IrisAnalyzer/Camera/: CameraController.swift
native-macos/Sources/IrisAnalyzer/Models/: Analysis.swift
native-macos/Sources/IrisAnalyzer/Report/: PDFReport.swift
native-macos/Sources/IrisAnalyzer/UI/: CameraPreview.swift  EyeCardView.swift  RootView.swift
native-macos/Sources/IrisAnalyzer/Vision/: IrisDetector.swift
packaging/: build_macos_app.sh  make_icon.py
tests/: conftest.py  test_advanced.py  test_features.py  test_guided_and_pdf.py  test_map.py  test_metrics.py  test_quality.py  test_segmentation.py  test_server.py  test_validation.py
web/: index.html
