[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "iris-analyzer"
version = "1.0.0"
description = "Aplicativo desktop de análise de imagem da íris (bem-estar). Não é dispositivo médico."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Dheiver Santos" }]
keywords = ["iris", "iridologia", "visao computacional", "bem-estar", "pyqt"]
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "mediapipe>=0.10.0",
    "scikit-image>=0.21.0",
    "PyQt6>=6.6.0",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
iris-analyzer = "desktop_app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.setuptools]
py-modules = [
    "desktop_app", "iris_segmentation", "iris_features", "iris_advanced",
    "iris_map", "captura_guiada", "pdf_report", "config", "validation",
    "download_model",
]
