[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "iris-analyzer"
version = "1.0.0"
description = "Aplicativo desktop de análise de imagem da íris (bem-estar). Não é dispositivo médico."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Dheiver Santos" }]
keywords = ["iris", "iridologia", "visao computacional", "bem-estar", "pyqt"]
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "mediapipe>=0.10.0",
    "scikit-image>=0.21.0",
    "PyQt6>=6.6.0",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.4", "pre-commit>=3.5"]

[project.scripts]
iris-analyzer = "iris_analyzer:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.setuptools]
packages = ["iris_analyzer"]
py-modules = ["download_model", "run"]

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = ["packaging", "docs"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",   # linhas longas ja controladas por line-length; alguns f-strings ultrapassam
    "E702",   # `a; b` em uma linha e usado deliberadamente no projeto p/ pares curtos
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F811"]
"iris_analyzer/server.py" = ["B008"]  # File(...)/Form(...) em default e o padrao do FastAPI
"iris_analyzer/iris_advanced.py" = ["E741"]  # `l` = canal L do espaco de cor Lab
